--- a/src/containers/Email/Email.scss
+++ b/src/containers/Email/Email.scss
@@ -41,7 +41,7 @@
 
       &:first-child {
         margin-bottom: 6px;
-        color: #FF9940;
+        color: $main-color;
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
