--- a/src/containers/Tutorial/Tutorial.scss
+++ b/src/containers/Tutorial/Tutorial.scss
@@ -28,4 +28,18 @@
     margin: 0 auto;
     margin-top: 40px;
   }
+
+  &__desktop-msg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 1;
+  }
 }
