refactor: style desktop version and add new components

--- a/src/containers/Results/Result.scss
+++ b/src/containers/Results/Result.scss
@@ -1,5 +1,7 @@
 @import '../../scss/utils/index';
 
+$bottom-position: -30px;
+
 .result {
   text-align: center;
   padding-top: 6px;
@@ -9,7 +11,7 @@
 
   &__title {
     margin-top: 29px;
-    margin-bottom: 12px;
+    margin-bottom: 60px;
 
     &--complete {
       margin-bottom: 16px;
@@ -25,7 +27,7 @@
   &__text {
     width: 100%;
     max-width: 315px;
-    margin: 0 auto 50px;
+    margin: auto auto 50px;
 
     @include breakpoint($mobile) {
       max-width: 286px;
@@ -67,6 +69,7 @@
     opacity: 0;
     visibility: hidden;
     margin-top: 20px;
+    position: relative;
 
     &.active {
       opacity: 1;
@@ -89,7 +92,7 @@
     }
 
     &--normal &-desc {
-      font-size: rem(18px);
+      font-weight: 600;
     }
 
     &--loose &-num {
@@ -105,6 +108,22 @@
     &--loose {
       right: 0;
       left: auto;
+
+      &::after {
+        content: '/';
+        position: absolute;
+        left: 0;
+        bottom: $bottom-position;
+      }
+    }
+
+    &--tight {
+      &::after {
+        content: '/';
+        position: absolute;
+        right: 0;
+        bottom: $bottom-position;
+      }
     }
   }
 
@@ -124,8 +143,12 @@
   }
 
   &__size-desc {
-    font-size: rem(12px);
-    font-weight: bold;
+    position: absolute;
+    bottom: $bottom-position;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    font-size: 14px;
   }
 
   &__email {
