refactor: welcome mobile screen

--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -10,6 +10,7 @@
   border: 2px solid $main-color;
   border-radius: 4px;
   background-color: #FFFFFF;
+  -webkit-appearance: none; /* for disable grey line on iphone */
 
   @include placeholder {
     color: #D3D3D3;
