refactor: style and refactor upload component

--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -3,6 +3,11 @@
 .upload {
   text-align: center;
   padding-top: 18px;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
   &__title {
     margin-bottom: 20px;
