--- a/src/components/UploadBlock/UploadBlock.scss
+++ b/src/components/UploadBlock/UploadBlock.scss
@@ -1,44 +1,16 @@
 @import '../../scss/utils/index';
 
 .upload-block {
-  display: block;
+  display: none;
 
-  &__title {
-    color: #F88E32;
-    font-size: rem(9px);
-    line-height: rem(11px);
-    font-weight: normal;
-    text-transform: uppercase;
-    margin-top: 5px;
+  &.active {
+    display: block;
   }
 
   &__text {
-    display: none;
-  }
-}
-
-.upload--is-mobile {
-  .upload-block  {
-    @include breakpoint($mobile) {
-      display: none;
-
-      &.active {
-        display: block;
-      }
-    }
-  }
-
-  .upload-block__title {
-    @include breakpoint($mobile) {
-      display: none;
-    }
-  }
-
-  .upload-block__text {
-    @include breakpoint($mobile) {
-      display: block;
-      max-width: 236px;
-      margin-top: 27px;
-    }
+    display: block;
+    max-width: 236px;
+    margin-top: 27px;
+    color: #9B9B9B;
   }
 }
