--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -23,13 +23,13 @@
   }
 
   &--is-mobile &__title-2 {
-    @include breakpoint($mobile) {
+    @include breakpoint($tablet) {
       display: none;
     }
   }
 
   &--is-mobile > p {
-    @include breakpoint($mobile) {
+    @include breakpoint($tablet) {
       display: none;
     }
   }
@@ -77,7 +77,7 @@
   }
 
   &--is-mobile &__video {
-    @include breakpoint($mobile) {
+    @include breakpoint($tablet) {
       display: none;
     }
   }
@@ -95,7 +95,7 @@
   }
 
   &--is-mobile &__files {
-    @include breakpoint($mobile) {
+    @include breakpoint($tablet) {
       width: 100%;
       justify-content: center;
     }
@@ -106,7 +106,7 @@
     display: none;
 
     &.active {
-      @include breakpoint($mobile) {
+      @include breakpoint($tablet) {
         display: block;
       }
     }
