refactor: update styles for mobile phones

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,10 @@
   justify-content: space-between;
   align-items: center;
 
+  @include breakpoint($iphoneSE) {
+    padding: 10px 10px 0;
+  }
+
   &__help,
   &__close {
     background: transparent;
