--- a/src/scss/layouts/_screen.scss
+++ b/src/scss/layouts/_screen.scss
@@ -114,9 +114,15 @@ $failure: $error-border-color;
       margin-bottom: 40px;
     }
 
+    @include breakpoint($iphoneSE) {
+      top: 32px;
+    }
+
     span {
       &.success {
         color: $success;
+
+
       }
 
       &.warning {
