--- a/src/containers/HeightContainer/HeightContainer.scss
+++ b/src/containers/HeightContainer/HeightContainer.scss
@@ -7,5 +7,9 @@
     @include breakpoint($mobile) {
       margin-top: 80px;
     }
+
+    @include breakpoint($iphoneSE) {
+      margin-top: 20px;
+    }
   }
 }
