feat: hide widget close icon for go to mobile screen

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,6 +19,10 @@
     border: none;
     position: relative;
     z-index: 10;
+
+    &--hide {
+      display: none;
+    }
   }
 
   &--white:not(.active) &__help {
