--- a/src/scss/layouts/_widget-container.scss
+++ b/src/scss/layouts/_widget-container.scss
@@ -41,3 +41,24 @@
     }
   }
 }
+
+.landscape-view {
+  display: none;
+
+  @media (orientation: landscape) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  img {
+    width: 100%;
+  }
+}
