--- a/src/scss/layouts/_widget-container.scss
+++ b/src/scss/layouts/_widget-container.scss
@@ -13,6 +13,7 @@
 
   @include breakpoint(max-width 768px) {
     height: auto;
+    max-width: 100%;
   }
 
   &--no-bg {
@@ -39,28 +40,5 @@
         }
       }
     }
-  }
-}
-
-.landscape-view {
-  display: none;
-
-  @include breakpoint($tablet) {
-    @media (orientation: landscape) {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: black;
-      z-index: 100;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-
-  img {
-    width: 100%;
   }
 }
