fix: Turn off gyroscope on Help page

--- a/src/components/Help/Help.scss
+++ b/src/components/Help/Help.scss
@@ -15,6 +15,12 @@
 
   &.active {
     display: flex;
+
+    & + .screen {
+      .widget-camera__warning {
+        z-index: 0;
+      }
+    }
   }
 
   &__footer {
