--- a/src/scss/components/_landscape-view.scss
+++ b/src/scss/components/_landscape-view.scss
@@ -17,7 +17,7 @@
 
   @include breakpoint($tablet) {
     @media (orientation: landscape) {
-      @media screen and (min-height: 320px) and (min-width: 568px){
+      @media screen and (min-height: 320px) {
         display: flex;
       }
     }
@@ -31,7 +31,7 @@
 body {
   @include breakpoint($tablet) {
     @media (orientation: landscape) {
-      @media screen and (min-height: 320px) and (min-width: 568px){
+      @media screen and (min-height: 320px) {
         overflow: hidden;
       }
     }
@@ -41,7 +41,7 @@ body {
 .widget-container {
   @include breakpoint($tablet) {
     @media (orientation: landscape) {
-      @media screen and (min-height: 320px) and (min-width: 568px){
+      @media screen and (min-height: 320px) {
         opacity: 0;
       }
     }
