refactor: close widget update

--- a/src/components/UploadBlock/UploadBlock.scss
+++ b/src/components/UploadBlock/UploadBlock.scss
@@ -3,6 +3,12 @@
 .upload-block {
   display: none;
 
+  &:last-child {
+    .upload-file {
+      transform: scaleX(-1);
+    }
+  }
+
   &.active {
     display: block;
   }
