--- a/src/components/ImageExample/ImageExample.scss
+++ b/src/components/ImageExample/ImageExample.scss
@@ -29,6 +29,7 @@
       width: 250px;
       height: 444px;
       object-fit: cover;
+      transform: scaleX(-1);
     }
   }
 
@@ -74,5 +75,6 @@
     border: none;
     background: transparent;
     padding: 16px;
+    z-index: 1;
   }
 }
