refactor: add disable state for welcome screen btn

--- a/src/scss/layouts/_widget-container.scss
+++ b/src/scss/layouts/_widget-container.scss
@@ -37,6 +37,17 @@
           background-color: white;
           color: $main-color;
           font-weight: 300;
+
+          &[disabled] {
+            box-shadow: none;
+            pointer-events: none;
+            background-color: #CECECE;
+            color: #fff;
+
+            &:before {
+              display: none;
+            }
+          }
         }
       }
     }
