--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,11 +5,14 @@
   padding: 0 28px;
   padding-top: 36px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 
   @include breakpoint($iphoneSE) {
     padding: 10px 10px 0;
+  }
+
+  &__close {
+    margin-left: auto;
   }
 
   &__help,
