--- a/src/components/ImageExample/ImageExample.scss
+++ b/src/components/ImageExample/ImageExample.scss
@@ -11,7 +11,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0;
+    left: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,6 +19,7 @@
     transition: opacity 0.5s ease, visibility 0.5s ease;
 
     &.active {
+      left: 0;
       opacity: 1;
       visibility: visible;
       z-index: 100;
