fix: resolve conflict with pf widget

--- a/.jsdoc2md/readme.hbs
+++ b/.jsdoc2md/readme.hbs
@@ -116,7 +116,7 @@ After this tag you can initialize the button. Example code:
 
 ```js
 (async () => {
-  const button = new SaiaButton({
+  const button = new SaiaMTMButton({
     // widget container element selector
     container: '.product-single__meta',
     // your SAIA API key
