--- a/src/templates/modal-drop.html
+++ b/src/templates/modal-drop.html
@@ -1,5 +1,5 @@
-<div class="saia-pf-drop">
-  <div class="saia-pf-drop__container">
+<div class="saia-mtm-drop">
+  <div class="saia-mtm-drop__container">
     <iframe frameborder="0" allow="geolocation; camera; gyroscope; accelerometer"></iframe>
   </div>
 </div>
