--- a/src/containers/Results/Result.scss
+++ b/src/containers/Results/Result.scss
@@ -56,7 +56,7 @@ $bottom-position: -30px;
     justify-content: center;
     margin: 0 auto;
     margin-bottom: 40px;
-    max-width: 300px;
+    width: 100%;
     position: relative;
 
     @include breakpoint($mobile) {
@@ -87,8 +87,8 @@ $bottom-position: -30px;
 
     &--normal &-num {
       height: 100px;
-      width: 100px;
-      font-size: rem(45px);
+      min-width: 100px;
+      font-size: rem(40px);
       margin-bottom: 11px;
       background: #000;
       color: #fff;
@@ -135,11 +135,13 @@ $bottom-position: -30px;
     justify-content: center;
     align-items: center;
     height: 60px;
-    width: 85px;
+    min-width: 85px;
+    width: auto;
+    padding: 0 5px;
     border-radius: 4px;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: rem(20px);
+    font-size: rem(14px);
     margin-bottom: 10px;
     background: #E5E7EB;
     color: #000;
