refactor: add animation to sms loader

--- a/src/containers/QRCodeContainer/QRCodeContainer.scss
+++ b/src/containers/QRCodeContainer/QRCodeContainer.scss
@@ -193,7 +193,7 @@
   }
 
   img.spin {
-    animation: qr-spin 3s linear infinite;
+    animation: sms-spin 3s linear infinite;
   }
 }
 
@@ -207,5 +207,14 @@
   background: #cecece;
   color: #fff;
   text-transform: unset;
+}
+
+@keyframes sms-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
