--- a/src/scss/layouts/_widget-container.scss
+++ b/src/scss/layouts/_widget-container.scss
@@ -22,11 +22,13 @@
 
   &:not(.widget-container--no-bg) {
     .header:not(.active) {
-      .header__svg-fill {
-        stroke: white;
+      text {
+        fill: black;
+      }
 
+      .header__svg-fill {
         &--circle {
-          stroke: #dddddd;
+          stroke: black;
         }
       }
     }
@@ -34,9 +36,7 @@
     .screen__footer {
       .button {
         &:not(.help__close) {
-          background-color: white;
-          color: $main-color;
-          font-weight: 300;
+          font-weight: 600;
 
           &[disabled] {
             box-shadow: none;
