--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -8,7 +8,7 @@ $error-text-color: #e2102a;
 $error-border-color: #e2102a;
 $error-background-color: #FFE8E8;
 
-$main-color: #ff9940;
+$main-color: #343239;
 
 $tablet: (max-width 1024px);
 $mobile: (max-width 500px);
