refactor: qr screen

--- a/src/containers/QRCodeContainer/QRCodeContainer.scss
+++ b/src/containers/QRCodeContainer/QRCodeContainer.scss
@@ -49,7 +49,7 @@
   }
 
   &__btn {
-    color: $main-color;
+    color: #396EC5;
     text-decoration: underline;
     background: transparent;
     border: 0;
