refactor: hard-validation screen

--- a/src/components/ImageExample/ImageExample.scss
+++ b/src/components/ImageExample/ImageExample.scss
@@ -57,6 +57,7 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12);
     border: 0;
     user-select: none;
+    font-weight: 500;
   }
 
   // &__btn:hover + &__img,
