--- a/src/containers/Results/Result.scss
+++ b/src/containers/Results/Result.scss
@@ -90,7 +90,7 @@ $bottom-position: -30px;
       min-width: 100px;
       font-size: rem(40px);
       margin-bottom: 11px;
-      background: #000;
+      background: $main-color;
       color: #fff;
     }
 
