--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -14,6 +14,7 @@
   @include breakpoint($mobile) {
     top: 40px;
     justify-content: space-between;
+    padding-top: 60px;
   }
 
   @media screen and (max-width: 374px) {
@@ -47,6 +48,11 @@
     text-align: center;
     margin-bottom: 14px;
     text-transform: uppercase;
+
+    @include breakpoint($mobile) {
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
   }
 
   &__title-wrap {
@@ -82,17 +88,48 @@
     }
   }
 
-  &__warning-txt {
-    width: 100%;
-    max-width: 320px;
-    font-weight: 500;
-    margin-bottom: -42px;
-  }
-
   &__status {
     color: #396EC5;
     font-weight: bold;
     line-height: 16px;
+    height: 16px;
+
+    @include breakpoint($mobile) {
+      font-size: 16px;
+      letter-spacing: 0;
+      line-height: 19px;
+      height: auto;
+    }
+  }
+
+  &__warning-block {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 342px;
+    margin: 0 auto 60px;
+    padding: 0 16px;
+  }
+
+  &__warning-icon {
+    flex-shrink: 0;
+    width: 22px;
+    height: 40px;
+    border: 2px solid #343239;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 800;
+    color: #E02020;
+    background-color: #F6FAFF;
+    font-size: 16px;
+    margin-right: 16px;
+  }
+
+  &__warning-txt {
+    font-size: 16px;
+    text-align: left;
   }
 
   &__animation {
@@ -100,6 +137,10 @@
     width: 100%;
     position: relative;
     margin-bottom: 70px;
+
+    @include breakpoint($mobile) {
+      margin-bottom: 50px;
+    }
   }
 
   &__animation-stage {
