--- a/src/components/UploadFile/UploadFile.scss
+++ b/src/components/UploadFile/UploadFile.scss
@@ -7,40 +7,21 @@ $mobile-image-height: 340px;
   background: #FFFFFF;
   transition: all ease 300ms;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 0 auto 54px;
   width: 100%;
-  max-width: 200px;
-
-  @include breakpoint($mobile) {
-    height: 76vw;
-  }
-
-  @include breakpoint($iphoneSE) {
-    height: 150px;
-  }
 
   &__image {
     width: 100%;
-    height: 100%;
     flex-grow: 1;
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 202px;
 
-    &.active {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &--preview img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    &--placeholder svg {
-      width: 200px;
-      height: $mobile-image-height;
+    img {
+      max-width: 100%;
     }
   }
 
