--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -6,12 +6,8 @@
   flex-grow: 1;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
-
-  @include breakpoint($iphoneSE) {
-    justify-content: flex-start;
-  }
 
   &__title {
     margin-bottom: 20px;
@@ -90,12 +86,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    max-width: 300px;
   }
 
   &__files {
     display: flex;
     justify-content: space-between;
-    width: 210px;
   }
 
   &--is-mobile &__files {
@@ -114,5 +111,30 @@
         display: block;
       }
     }
+  }
+
+  &__banner {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 315px;
+    border-radius: 4px;
+    padding: 10px 14px;
+    background-color: #F1F3F4;
+    margin-bottom: 50px;
+  }
+
+  &__banner-icon {
+    margin: 0 16px 0 0;
+    flex-shrink: 0;
+  }
+
+  &__banner-txt {
+    color: #3A3A3A;
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: left;
   }
 }
