--- a/src/components/PhotoExample/PhotoExample.scss
+++ b/src/components/PhotoExample/PhotoExample.scss
@@ -37,6 +37,10 @@
     position: relative;
     flex-grow: 1;
 
+    &--side {
+      transform: scaleX(-1);
+    }
+
     img {
       max-width: 100%;
       border-radius: 4px;
