feat: preloader for desktop

--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -175,6 +175,44 @@
     animation: 6s indicator-up-and-down linear infinite .3s;
     will-change: transform;
   }
+
+  &__instructions {
+    margin-top: 160px;
+    width: 100%;
+    max-width: 320px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+
+    &--active {
+      display: flex;
+
+      & ~ * {
+        display: none;
+      }
+    }
+  }
+
+  &__instructions-phone-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    max-width: 60px;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  &__instructions-spinner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 28px;
+    animation: preloader-spinner 2.5s linear infinite;
+  }
 }
 
 @keyframes indicator-up-and-down {
@@ -207,5 +245,15 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes preloader-spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
