--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -27,6 +27,14 @@
     align-items: center;
     z-index: 1;
 
+    @media (max-width: 414px) and (max-height: 662px) {
+      justify-content: flex-start;
+    }
+
+    @media (max-width: 375px) and (max-height: 580px) {
+      padding-top: 30px;
+    }
+
     &::after {
       content: '';
       position: absolute;
@@ -66,8 +74,8 @@
       margin-bottom: 40px;
     }
 
-    @media screen and (max-width: 374px) {
-      margin-bottom: 14px;
+    @media (max-width: 375px) and (max-height: 580px) {
+      margin-bottom: 16px;
     }
   }
 
@@ -109,6 +117,14 @@
     max-width: 342px;
     margin: 0 auto 60px;
     padding: 0 16px;
+
+    @media (max-width: 414px) and (max-height: 662px) {
+      margin-bottom: 24px;
+    }
+
+    @media (max-width: 375px) and (max-height: 580px) {
+      margin-bottom: 16px;
+    }
   }
 
   &__warning-icon {
@@ -141,6 +157,10 @@
 
     @include breakpoint($mobile) {
       margin-bottom: 50px;
+    }
+
+    @media (max-width: 375px) and (max-height: 580px) {
+     margin-bottom: 16px;
     }
   }
 
