--- a/src/components/PhotoExample/PhotoExample.scss
+++ b/src/components/PhotoExample/PhotoExample.scss
@@ -36,6 +36,7 @@
     width: 100%;
     position: relative;
     flex-grow: 1;
+    display: flex;
 
     &--side {
       transform: scaleX(-1);
@@ -45,6 +46,7 @@
       max-width: 100%;
       border-radius: 4px;
       overflow: hidden;
+      object-fit: contain;
     }
   }
 }
