--- a/src/scss/layouts/_screen.scss
+++ b/src/scss/layouts/_screen.scss
@@ -27,11 +27,12 @@ $failure: $error-border-color;
 
   &__intro-title {
     text-transform: uppercase;
-    font-size: 24px;
     font-weight: bold;
-    line-height: 28px;
     text-align: center;
     margin-bottom: 14px;
+    color: $main-color;
+    font-size: 21px;
+    line-height: 24px;
 
     @include breakpoint($mobile) {
       font-size: 17px;
