--- a/src/components/Guide/Guide.scss
+++ b/src/components/Guide/Guide.scss
@@ -5,11 +5,15 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 97%;
   background-color: white;
   padding-top: 36px;
   z-index: 100;
   overflow: auto;
+
+  @include breakpoint($mobile) {
+    height: 100%;
+  }
 
   &__container {
     display: flex;
@@ -31,6 +35,9 @@
 
   &__img {
     margin: 0 0 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     img {
       max-width: 256px;
