feat: add camera mode switcher

--- a/src/components/UploadBlock/UploadBlock.scss
+++ b/src/components/UploadBlock/UploadBlock.scss
@@ -3,6 +3,11 @@
 .upload-block {
   display: none;
 
+  width: 100%; /* temporarily while table-flow is being tested */
+  height: 100%; /* temporarily while table-flow is being tested */
+  background: transparent; /* temporarily while table-flow is being tested */
+  opacity: 0; /* temporarily while table-flow is being tested */
+
   &.active {
     display: block;
   }
@@ -11,9 +16,11 @@
     width: 100%;
     max-width: 240px;
     margin: 0 auto 16px;
+    display: none;
   }
 
   &__btn {
+    display: none;
     font-size: 12px;
     font-weight: bold;
     line-height: 14px;
