--- a/src/components/UploadFile/UploadFile.scss
+++ b/src/components/UploadFile/UploadFile.scss
@@ -9,6 +9,9 @@ $mobile-image-height: 340px;
   overflow: hidden;
   margin: 0 auto 54px;
   width: 100%;
+  margin: 0 !important; /* temporarily while table-flow is being tested */
+  width: 100%; /* temporarily while table-flow is being tested */
+  height: 100%; /* temporarily while table-flow is being tested */
 
   @media (max-width: 414px) and (max-height: 667px) {
     margin-bottom: 24px;
@@ -23,6 +26,8 @@ $mobile-image-height: 340px;
     align-items: center;
     position: relative;
     height: 202px;
+
+    height: auto !important; /* temporarily while table-flow is being tested */
 
     @media (max-width: 414px) and (max-height: 667px) {
       height: 50vw;
