--- a/src/containers/Upload/Upload.scss
+++ b/src/containers/Upload/Upload.scss
@@ -11,6 +11,7 @@
 
   &__title {
     margin-bottom: 20px;
+    position: relative; /* temporarily while table-flow is being tested */
   }
 
   &__title-2 {
@@ -121,7 +122,7 @@
     border-radius: 4px;
     padding: 10px 14px;
     background-color: #F1F3F4;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   &__banner-icon {
@@ -136,5 +137,13 @@
     letter-spacing: 0;
     line-height: 16px;
     text-align: left;
+  }
+
+  &__upload-file { /* temporarily while table-flow is being tested */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
