--- a/src/components/Guide/Guide.scss
+++ b/src/components/Guide/Guide.scss
@@ -15,6 +15,10 @@
     height: 100%;
   }
 
+  & ~ .measurements__wrapper {
+    opacity: 0;
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
