fix: upload photo from gallery for iphone

--- a/src/containers/WeightContainer/WeightContainer.scss
+++ b/src/containers/WeightContainer/WeightContainer.scss
@@ -33,6 +33,7 @@
       width: 100%;
       height: 100%;
       opacity: 0;
+      -webkit-appearance: none; /* for iphone select height */
 
       + .weight-container__placeholder {
         height: 100%;
