--- a/src/components/Height/Height.scss
+++ b/src/components/Height/Height.scss
@@ -182,6 +182,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
+    -webkit-appearance: none; /* for iphone select height */
   }
 
   input[disabled] {
