--- a/src/components/HowToTakePhotos/HowToTakePhotos.scss
+++ b/src/components/HowToTakePhotos/HowToTakePhotos.scss
@@ -2,4 +2,70 @@
 
 .how-to-take-photos {
   padding-top: 18px;
+  display: flex;
+  flex-direction: column;
+
+  .screen__title {
+    margin-bottom: 16px;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    background: #F6F6F6;
+    flex-grow: 1;
+    margin-top: -80px;
+    padding-top: 80px;
+  }
+
+  &__video-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__video {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  &__progress-bar {
+    display:flex;
+    height: 2px;
+    background: transparent;
+  }
+
+  &__progress {
+    background: $main-color;
+    flex-basis: 0;
+  }
+
+  &__btn-wrap {
+    flex-grow: 1;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__btn {
+    margin-top: 36px;
+    font-weight: 500;
+    padding: 0;
+    border: none;
+    background: transparent;
+    display: flex;
+    align-items: center;
+
+    i {
+      font-size: 18px;
+      transform: scaleX(-1);
+      display: inline-block;
+      font-style: normal;
+    }
+
+    span {
+      margin-left: 8px;
+    }
+  }
 }
