--- a/src/components/PhotoExample/PhotoExample.scss
+++ b/src/components/PhotoExample/PhotoExample.scss
@@ -12,14 +12,16 @@
   padding-top: 42px;
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   &__container {
     width: 100%;
     max-width: 275px;
     margin: 0 auto;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    max-height: 100%;
+    height: 100%;
   }
 
   &__title {
@@ -37,6 +39,9 @@
     position: relative;
     flex-grow: 1;
     display: flex;
+    background-position: top center;
+    background-size: contain;
+    background-repeat: no-repeat;
 
     &--side {
       transform: scaleX(-1);
@@ -48,5 +53,11 @@
       overflow: hidden;
       object-fit: contain;
     }
+  }
+
+  &__img-onload-detect {
+    opacity: 0;
+    width: 10px;
+    height: 10px;
   }
 }
