--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -11,6 +11,20 @@ body {
   @include breakpoint(max-width 768px) {
     display: flex;
   }
+
+  &.offline {
+    .header__offline-status {
+      display: block;
+    }
+
+    .screen__footer {
+      .button {
+        pointer-events: none !important;
+        background-color: #cecece !important;
+        color: #fff !important;
+      }
+    }
+  }
 }
 
 button {
