refactor: upload screen responsive style

--- a/src/components/UploadBlock/UploadBlock.scss
+++ b/src/components/UploadBlock/UploadBlock.scss
@@ -2,9 +2,11 @@
 
 .upload-block {
   display: none;
+  flex-direction: column;
+  width: 100%;
 
   &.active {
-    display: block;
+    display: flex;
   }
 
   &__text {
