--- a/src/components/UploadFile/UploadFile.scss
+++ b/src/components/UploadFile/UploadFile.scss
@@ -9,11 +9,8 @@ $mobile-image-height: 340px;
   overflow: hidden;
   margin: 0 auto 54px;
   width: 100%;
-
-  @media (max-width: 414px) and (max-height: 667px) {
-    margin-bottom: 24px;
-  }
-
+  flex-grow: 1;
+  
   &__image {
     width: 100%;
     flex-grow: 1;
@@ -22,15 +19,9 @@ $mobile-image-height: 340px;
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 202px;
-
-    @media (max-width: 414px) and (max-height: 667px) {
-      height: 50vw;
-    }
-
-    @media (max-width: 375px) and (max-height: 560px) {
-      height: 33vw;
-    }
+    background-size: contain;
+    background-position: top center;
+    background-repeat: no-repeat;
 
     img {
       max-width: 100%;
@@ -40,5 +31,11 @@ $mobile-image-height: 340px;
 
   input {
     @include visually-hidden;
+  }
+
+  &__img-onload-detect {
+    opacity: 0;
+    width: 10px;
+    height: 10px;
   }
 }
