--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -32,6 +32,10 @@ body {
     .widget-camera-take-photo {
       pointer-events: none !important;
     }
+
+    .weight-container__skip-btn {
+      pointer-events: none !important;
+    }
   }
 }
 
